--- a/README
+++ b/README
@@ -1,18 +1,1 @@
-
-nordvpn-update [-h] [-c country] [-u url] [-p protocol] [-d directory]
-
-Retrieves the NordVPN .ovpn configuration files for the specified
-country and protocol and installs them to /etc/ovpn/.
-
-Options:
-
- h, --help	display this help and exit
- c, --country	set server country (uk, us, fr, etc.)
-		defaults to uk
- p, --protocol	communication protocol (udp, tcp)
-		defaults to udp
- u, --url	server ovpn url
-		defaults to https://downloads.nordcdn.com/configs/archives/servers/ovpn.zip
- d, --directory	set installation directory
-		defaults to /etc/openvpn
-
+nordvpn-update.sh
